header, itemize, inline command.
Patterns bwgining with // seems hard to define by activating characters.

--- a/revtex.ini
+++ b/revtex.ini
@@ -1,26 +1,118 @@
-\let\bxiiorgdump=\dump
-\let\dump=\endinput % suppress \dump
-\input uptex.tex
-\let\dump=\bxiiorgdump
+\let\myorgdump=\dump
+\let\dump=\endinput
+\input uplatex.ltx
+\let\dump=\myorgdump
 
 \catcode`\#=6
+\catcode`\@=11
 \chardef\active=13
-\catcode`\@=12
-\long\def\@gobble#1{}
 
+
+%%%
+%%% Headers
+%%%
 \begingroup
-\catcode`\==\active\gdef={\eq@protected}
+\catcode`\==\active
+\gdef=#1#2{\let\@tmpa#1\let\@tmpb#2%
+  \ifvmode \@headertrue\inc@header@cnt
+    \ifcat\noexpand=\noexpand#1 \inc@header@cnt\let\@tmpa\relax
+      \ifcat\noexpand=\noexpand#2 \inc@header@cnt\let\@tmpb\relax
+  \fi\fi\fi
+  \eq@protected\@tmpa\@tmpb}
 \endgroup
 
-\def\eq@protected{\ifvmode\review@chapter\else=\fi}
-\def\review@chapter#1\par{\ifx=#1\else{\gt Chapter. #1}\par\vskip\baselineskip\fi}
-%\def\reviewchapter#1\par{%
-%  \ifx\eqprotected#1\else{\gt Chapter. #1}\par\vskip\baselineskip
-%  \fi}
-%\def\review@section#1\par{{\gt #1}\par\vskip\baselineskip}
+\newif\if@header
+\newcount\header@cnt
+\def\inc@header@cnt{\global\advance\header@cnt by 1}
+\def\reset@header@cnt{\global\header@cnt=-1}
 
-\catcode`\==\active
+\reset@header@cnt
+\def\eq@protected{\if@header\proc@header\else =\fi}
+\def\proc@header{%
+  \expandafter\gen@header\header@cnt}
+\def\gen@header#1{\@headerfalse%
+  \ifcase #1 \review@chapter
+  \or        \expandafter\review@section
+  \or        \expandafter\review@subsection
+  \fi\reset@header@cnt}
+\def\review@chapter#1\par{\edef\chapstring{#1}\chapter{\chapstring}}
+\def\review@section#1\par{\edef\sectstring{#1}\section{\sectstring}}
+\def\review@subsection#1\par{\edef\subsectstring{#1}\subsection{\subsectstring}}
+
+
+%%%
+%%% Itemize
+%%%
+\newif\if@itemize
+
+\begingroup
+\catcode`\*=\active
+\gdef*{%
+  \ifvmode\@itemizetrue\begin{itemize}
+    \everypar={\end{itemize}\@itemizefalse}
+  \fi
+  \itemize@to@eol}%
+\endgroup
+
+\def\itemize@to@eol{\begingroup\catcode`\^^M=12 \@@itemize@to@eol}
+{\catcode`\^^M=12 %
+  \gdef\@@itemize@to@eol#1^^M{\review@itemize@head#1\endgroup}}
+\def\review@itemize@head{\if@itemize \item \else* \fi}
+
+
+%%%
+%%% Inline Commands
+%%%
+
+\begingroup
+\catcode`\@=\active
+
+\gdef\codereview{code}
+\gdef\bfreview{b}
+
+\gdef@<#1>#2{%
+  \def\reviewname{#1}
+  \ifx\codereview\reviewname\texttt{#2}\fi
+  \ifx\bfreview\reviewname\textbf{#2}\fi}
+\endgroup
+
+
+%%%
+%%% Environment
+%%%
+
+\begingroup
+\catcode`\/=\active
+\long\gdef//list#1{\catcode`\/=\active\def//{}\begin{alltt}\obeylines#1\end{alltt}}
+\endgroup
+
+
+
+%%%
+%%% End of the Re:VEIW document must be the line only with "#@# fin"
+%%%
+\begingroup
+\catcode`\#=\active
+\catcode`\@=\active
+  \gdef#@# fin{\end{document}}
+\endgroup
+
+
+%%%
+%%% Use upLaTeX for typesetting
+%%%
+\documentclass[uplatex]{jsbook}
+\usepackage{otf}
+\usepackage{alltt}
+\begin{document}
+
+\catcode`\*=\active
+\catcode`\#=\active
+\catcode`\@=\active
+\catcode`\/=\active
+\catcode`\==\active % should be the last
+
 \dump
 
-
+\end{document}
 
