--- a/revtex.ini
+++ b/revtex.ini
@@ -31,13 +31,13 @@
 \def\proc@header{%
   \expandafter\gen@header\header@cnt}
 \def\gen@header#1{\@headerfalse%
-  \ifcase #1 \review@chapter
+  \ifcase #1 \expandafter\review@chapter
   \or        \expandafter\review@section
   \or        \expandafter\review@subsection
   \fi\reset@header@cnt}
-\def\review@chapter#1\par{\edef\chapstring{#1}\chapter{\chapstring}}
-\def\review@section#1\par{\edef\sectstring{#1}\section{\sectstring}}
-\def\review@subsection#1\par{\edef\subsectstring{#1}\subsection{\subsectstring}}
+\long\def\review@chapter#1\par{\edef\chapstring{#1}\chapter[]{\chapstring}}
+\long\def\review@section#1\par{\edef\sectstring{#1}\section[]{\sectstring}}
+\long\def\review@subsection#1\par{\edef\subsectstring{#1}\subsection[]{\subsectstring}}
 
 
 %%%
@@ -55,8 +55,8 @@
 \endgroup
 
 \def\itemize@to@eol{\begingroup\catcode`\^^M=12 \@@itemize@to@eol}
-{\catcode`\^^M=12 %
-  \gdef\@@itemize@to@eol#1^^M{\review@itemize@head#1\endgroup}}
+{\catcode`\^^M=12 \catcode`\^^I=5 %
+  \gdef\@@itemize@to@eol#1^^M{\review@itemize@head#1 \endgroup}}
 \def\review@itemize@head{\if@itemize \item \else* \fi}
 
 
@@ -78,14 +78,19 @@
 
 
 %%%
-%%% Environment
+%%% Environment 
 %%%
 
 \begingroup
 \catcode`\/=\active
-\long\gdef//list#1{\catcode`\/=\active\def//{}\begin{alltt}\obeylines#1\end{alltt}}
+\gdef//#1#{\begingroup\catcode`\/=\active\def//{}
+  \csname review@#1\endcsname}
 \endgroup
 
+\long\def\review@list#1{\begin{alltt}#1\end{alltt}\endgroup}
+\long\def\review@quote#1{\begin{quote}#1\end{quote}\endgroup}
+\long\def\review@read#1{\begin{quote}#1\end{quote}\endgroup}
+\def\review@footnote#1{\footnote{#1}\endgroup}
 
 
 %%%
@@ -101,9 +106,10 @@
 %%%
 %%% Use upLaTeX for typesetting
 %%%
-\documentclass[uplatex]{jsbook}
-\usepackage{otf}
+\documentclass[uplatex,20pt]{jsbook}
+\usepackage[uplatex,jis2004,expert]{otf}
 \usepackage{alltt}
+\nofiles
 \begin{document}
 
 \catcode`\*=\active
@@ -113,6 +119,4 @@
 \catcode`\==\active % should be the last
 
 \dump
-
-\end{document}
 
