fixed space leak

--- a/revtex.ini
+++ b/revtex.ini
@@ -49,15 +49,16 @@
 \catcode`\*=\active
 \gdef*{%
   \ifvmode\@itemizetrue\begin{itemize}
-    \everypar={\end{itemize}\@itemizefalse}
+    \everypar={\end{itemize}\@itemizefalse\par}
   \fi
   \itemize@to@eol}%
 \endgroup
 
+\def\literal@ast{*}
 \def\itemize@to@eol{\begingroup\catcode`\^^M=12 \@@itemize@to@eol}
 {\catcode`\^^M=12 \catcode`\^^I=5 %
-  \gdef\@@itemize@to@eol#1^^M{\review@itemize@head#1 \endgroup}}
-\def\review@itemize@head{\if@itemize \item \else* \fi}
+  \gdef\@@itemize@to@eol#1^^M{\review@itemize@head#1\endgroup}}
+\def\review@itemize@head{\if@itemize \item \else*\fi}
 
 
 %%%
@@ -83,7 +84,7 @@
 
 \begingroup
 \catcode`\/=\active
-\gdef//#1#{\begingroup\catcode`\/=\active\def//{}
+\gdef//#1#{\begingroup\catcode`\/=\active\def//{}%
   \csname review@#1\endcsname}
 \endgroup
 
