added par-line comment out

--- a/revtex.ini
+++ b/revtex.ini
@@ -95,13 +95,17 @@
 
 
 %%%
-%%% End of the Re:VEIW document must be the line only with "#@# fin"
+%%% par-line comment out
 %%%
 \begingroup
 \catcode`\#=\active
 \catcode`\@=\active
-  \gdef#@# fin{\end{document}}
+  \gdef#@# {\ignorethisline}
 \endgroup
+
+\def\ignorethisline{\begingroup\catcode`\^^M=12 \@ignorethisline}
+{\catcode`\^^M=12 \catcode`\^^I=5 %
+  \gdef\@ignorethisline#1^^M{\endgroup\par}}
 
 
 %%%
