--- a/revtex.ini
+++ b/revtex.ini
@@ -109,6 +109,12 @@
 
 
 %%%
+%%% end of Input
+%%%
+\everyeof={\end{document}}
+
+
+%%%
 %%% Use upLaTeX for typesetting
 %%%
 \documentclass[uplatex,20pt]{jsbook}
